# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: architecturedoc.md  definingdoc.md  instructionsdoc.md  testingdoc.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: filehandler.py  huffman.py  lzw.py  main.py
src/input_files/: testi.txt
src/normal_files/: sample.txt
src/output_files/: testi.lzw
src/packed_files/: sample.lzw
src/tests/: huffman_test.py  lzw_test.py
src/tests/normal_files/: sample1.txt  sample2.txt  sample3.txt
