[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Leevi Kokkinen <leevi.kokkinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.0"
coverage = "^6.3.2"
unittest = "^0.0"
pytest = "^7.1.1"
invoke = "^1.7.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
